# debugdeck

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
data/: debugdeck.notifyrc
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: AlertBanner.qml  CompactIcon.qml  FilterBar.qml  LogBackend.qml  LogView.qml  SystemInfoBar.qml  ToolsPanel.qml  configGeneral.qml  configInfoBar.qml  configNotifications.qml  main.qml
src/plugin/: CMakeLists.txt  debugdeckplugin.cpp  debugdeckplugin.h  journaldwatcher.cpp  journaldwatcher.h  launcher.cpp  launcher.h  logentry.cpp  logentry.h  logfiltermodel.cpp  logfiltermodel.h  logmodel.cpp  logmodel.h  qmldir.in
